--- a/index.html
+++ b/index.html
@@ -7,35 +7,98 @@
 </head>
 
 <body>
-  <!--<img src="tozum.jpg" alt="tozum profile picture">-->
+  <!--<img src="tozum.jpg" alt="tozum profile picture" sytle="width:30px;height:30px;">-->
   <h1>Mert Tözüm</h1>
-  <p><em>Mechanical Engineering Student at <a href="https://www.etu.edu.tr/tr">TOBB Economy and Technology University</a></em></p>
+  <p><em>Mechanical Engineering Undergraduate Student at <a href="https://www.etu.edu.tr/tr">TOBB Economy and Technology University</a></em></p>
   <p>I am a third year mechanical engineering student.</p>
+  <p><a href="https://www.linkedin.com/in/mert-t%C3%B6z%C3%BCm-547b9a220/">Linkedin</a></p>
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Ankara Özel Tevfik Fikret Lisesi</li>
-    <li>Mechanical Engineering TOBB ETU</li>
+    <table cellspacing='10'>
+      <tr>
+        <td><li><strong><em>TOBB Economy and Technology University</em></strong></li></td>
+        <td><strong>2019 -</strong></td>
+      </tr>
+      <tr>
+        <td>Mühendislik Fakültesi</td>
+      </tr>
+      <tr>
+        <td>Makine Mühendisliği Lisans</td>
+      </tr>
+      <tr>
+        <td>Current GPA: 2.87/4.00</td>
+      </tr>
+      <tr>
+        <td><li><strong><em>Ankara Özel Tevfik Fikret Anadolu Lisesi</em></strong></li></td>
+        <td><strong>2015 - 2019</strong></td>
+      </tr>
+      <tr>
+        <td>GPA : 79.85/100</td>
+      </tr>
+    </table>
   </ul>
+
+  <hr>
+
   <h3>Hobbies</h3>
-  <ol start="1">
-    <li>Sports</li>
-    <li>Music</li>
-  </ol>
+  <ul>
+    <li>Guitar(Electro, Acoustic)</li>
+    <li>Drums</li>
+    <li>Formula 1</li>
+    <li>Tennis</li>
+    <li>Basketball</li>
+    <li>PC Games</li>
+  </ul>
+
   <hr>
 
   <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Solidworks</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>MATLAB</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-  </table>
+  <ul>
+    <table cellspacing="10">
+      <tr>
+        <td><li><strong>Languages</strong></li></td>
+      </tr>
+      <tr>
+        <td>English</td>
+        <td>TOEFL ITP: 507</td>
+      </tr>
+      <tr>
+        <td>French</td>
+        <td>DELF B2: 68/100</td>
+      </tr>
+      <tr>
+        <td><li><strong>Computer Programmes</strong></li></td>
+      </tr>
+      <tr>
+        <td>C Programming Language</td>
+      </tr>
+      <tr>
+        <td>MATLAB</td>
+      </tr>
+      <tr>
+        <td>Solidworks</td>
+      </tr>
+      <tr>
+        <td>Autocad (Intermediate)</td>
+      </tr>
+      <tr>
+        <td>HTML</td>
+      </tr>
+      <tr>
+        <td>Microsoft Office (Excel, Word, Powerpoint)</td>
+      </tr>
+    </table>
 
+
+  </ul>
+
+  <hr>
+  <h3>Personal İnformation</h3>
+  <ul>
+    <li>Date of Birth: 09.07.2001</li>
+    <li>Drivers Licence: M,B, B1, F</li>
+  </ul>
   <hr>
   <a href="contacts.html">Contact me!</a>
 </body>
