--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <td><strong>2019 -</strong></td>
       </tr>
       <tr>
-        <td>Mühendislik Fakültesi</td>
+        <td>Faculty of Engineering</td>
       </tr>
       <tr>
-        <td>Makine Mühendisliği Lisans</td>
+        <td>Mechanical Engineering Undergraduate</td>
       </tr>
       <tr>
         <td>Current GPA: 2.87/4.00</td>
